--- a/desktop.ini
+++ b/desktop.ini
@@ -1,2 +1,2 @@
 [.ShellClassInfo]
-IconResource=D:\mobileFX\Projects\Software\Coconut\IDE\Coconut2D\Data Files\icons\Coconut2D_Folder.ico ,0
+IconResource=C:\Users\YiamiYo\Documents\GitHub\IDE\Coconut2D\Data Files\icons\Coconut2D_Folder.ico ,0
